tests/negative/01_use_after_move.nova
// EXPECT: error "Use of moved value"
shape Asset {
    id: i32
}

fn main() -> i32 {
    var a: Asset = Asset { id: 1 };
    var b: Asset = a;    // 'a' is moved to 'b'
    return a.id;         // error: use of moved value 'a'
}
